# mlops-pipeline-platform

./: .gitignore  License  Makefile  README.md  pyproject.toml
.github/: ci.yml
configs/: pipeline_config.yml
docker/: serving.Dockerfile  training.Dockerfile
k8s/base/: serving-deployment.yml
pipelines/: infererence_pipeline.py  retraining_pipeline.py  training_pipeline.py
src/monitoring/: drift_detector.py
src/serving/: api.py
