[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlops-pipeline-platform"
version = "1.0.0"
description = "End-to-end MLOps pipeline for training, versioning, and deploying ML models"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Shivam Shukla", email = "shivam@example.com"}]

dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "mlflow>=2.8",
    "fastapi>=0.104",
    "uvicorn>=0.24",
    "prometheus-client>=0.19",
    "pydantic>=2.5",
    "pyarrow>=14.0",
]

[project.optional-dependencies]
training = [
    "xgboost>=2.0",
    "lightgbm>=4.1",
    "kfp>=2.4",
    "scipy>=1.11",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.23",
    "ruff>=0.1",
    "httpx>=0.25",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
